--- a/index.html
+++ b/index.html
@@ -1,21 +1,37 @@
-<!DOCTYPE html>
-<html lang="id">
+<!DOCTYPE html><html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GasJo - Pelacak</title>
+  <title>GasJo - Rute Ojek</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    body { margin: 0; font-family: Arial, sans-serif; background: #f8fafc; }
-    #map { height: 60vh; }
-    .btns { text-align: center; padding: 1rem; background: #fff; }
-    button {
-      padding: 12px 20px;
-      margin: 0.5rem;
-      background: #1f2937;
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #062135;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 1rem;
+    }
+    h1 { margin-bottom: 1rem; }
+    #map {
+      width: 90%;
+      height: 300px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+      margin-bottom: 1rem;
+    }
+    .button-group button {
+      background-color: #1e3a8a;
       color: white;
       border: none;
+      padding: 0.7rem 1.5rem;
+      margin: 0.3rem;
       border-radius: 8px;
+      font-size: 1rem;
+      cursor: pointer;
     }
     .popup {
       position: fixed;
@@ -23,86 +39,86 @@
       left: 50%;
       transform: translate(-50%, -50%);
       background: white;
-      padding: 1.5rem;
+      color: black;
+      padding: 1rem 2rem;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 20px rgba(0,0,0,0.5);
       display: none;
       z-index: 999;
     }
   </style>
 </head>
 <body>
-  <h2 style="text-align:center; background:#1f2937; color:white; padding:10px;">GasJo - Lacak & Hitung</h2>
+  <h1>GasJo - Rekam Rute Ojek</h1>
   <div id="map"></div>
-  <div class="btns">
+  <div class="button-group">
     <button onclick="mulaiTracking()">Mulai</button>
     <button onclick="selesaiTracking()">Selesai</button>
-  </div>
-  <div class="popup" id="popupBox"></div>
-
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script>
-    let map = L.map('map').setView([-6.2, 106.8], 13);
+  </div>  <div id="popup" class="popup"></div>  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>  <script>
+    let map = L.map('map').setView([0, 0], 18);
     let route = [];
-    let polyline;
-    let watchId = null;
     let totalDistance = 0;
+    let tracking = false;
+    let watchId = null;
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19
+      maxZoom: 19,
+      attribution: '© OpenStreetMap'
     }).addTo(map);
 
-    function haversine(lat1, lon1, lat2, lon2) {
-      const R = 6371;
-      const dLat = (lat2 - lat1) * Math.PI / 180;
-      const dLon = (lon2 - lon1) * Math.PI / 180;
-      const a = Math.sin(dLat/2)**2 + Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) * Math.sin(dLon/2)**2;
-      return R * 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
-    }
+    let polyline = L.polyline([], { color: 'lime', weight: 5 }).addTo(map);
 
     function mulaiTracking() {
-      if (!navigator.geolocation) {
-        alert("Geolocation tidak didukung");
-        return;
+      route = [];
+      totalDistance = 0;
+      tracking = true;
+      polyline.setLatLngs([]);
+
+      if (navigator.geolocation) {
+        watchId = navigator.geolocation.watchPosition(pos => {
+          const latlng = [pos.coords.latitude, pos.coords.longitude];
+          route.push(latlng);
+          polyline.addLatLng(latlng);
+          map.setView(latlng, 18);
+
+          if (route.length > 1) {
+            const prev = route[route.length - 2];
+            const dist = map.distance(prev, latlng);
+            totalDistance += dist;
+          }
+        }, err => {
+          alert('Gagal mendapatkan lokasi: ' + err.message);
+        }, {
+          enableHighAccuracy: true,
+          timeout: 20000,
+          maximumAge: 0
+        });
+      } else {
+        alert("Geolocation tidak didukung di browser ini.");
       }
-
-      watchId = navigator.geolocation.watchPosition(pos => {
-        const lat = pos.coords.latitude;
-        const lon = pos.coords.longitude;
-        const newPoint = [lat, lon];
-        route.push(newPoint);
-
-        L.marker(newPoint).addTo(map);
-        map.setView(newPoint, 16);
-
-        if (route.length > 1) {
-          const prev = route[route.length - 2];
-          totalDistance += haversine(prev[0], prev[1], lat, lon);
-        }
-
-        if (polyline) map.removeLayer(polyline);
-        polyline = L.polyline(route, { color: 'blue' }).addTo(map);
-      }, err => {
-        alert("Gagal mendapatkan lokasi: " + err.message);
-      }, {
-        enableHighAccuracy: true,
-        timeout: 20000,
-        maximumAge: 0
-      });
     }
 
     function selesaiTracking() {
-      if (watchId) navigator.geolocation.clearWatch(watchId);
+      if (!tracking) return;
+      tracking = false;
+      navigator.geolocation.clearWatch(watchId);
 
-      const km = totalDistance.toFixed(2);
-      const harga = (km * 2500).toLocaleString('id-ID');
+      const km = totalDistance / 1000;
+      const tarifPerKm = 2500;
+      const biaya = Math.round(km * tarifPerKm);
 
-      const box = document.getElementById("popupBox");
-      box.innerHTML = `<h3>Perjalanan Selesai</h3><p>Jarak: ${km} km</p><p>Biaya: Rp ${harga}</p>`;
-      box.style.display = "block";
+      const info = `
+        Jarak: ${km.toFixed(2)} km<br>
+        Biaya: Rp ${biaya.toLocaleString('id-ID')}
+      `;
 
-      setTimeout(() => box.style.display = "none", 7000);
+      const popup = document.getElementById("popup");
+      popup.innerHTML = info;
+      popup.style.display = "block";
+
+      setTimeout(() => {
+        popup.style.display = "none";
+      }, 8000);
     }
-  </script>
-</body>
-</html>
+  </script></body>
+  </html>
